[package]
name = "clump_tracker_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.19"
numpy = { git = "https://github.com/PyO3/rust-numpy.git", version = "0.27.0", branch = "main" }
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py310"] }
